<resources>
    <string name="app_name">Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="show_task">Task (switch to edit)</string>
    <string name="create_task_toolbar">Create Task</string>
    <string name="save_changes_button">Save changes</string>
    <string name="input_error_msg">All fields except description must be filled</string>
    <string name="progress_error_msg">Progress value can\'t be bigger than 100</string>

    <string name="task_name_hint">Task name</string>
    <string name="task_progress_hint">Progress</string>
    <string name="task_description_hint">Task description (Optional)</string>
    <string name="task_start_hint">Start date</string>
    <string name="task_due_hint">Due date</string>
    <string name="task_time_hint">Estimated time</string>
</resources>
